--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <a href="https://github.com/sriyu_06" class="text-blue-400 hover:text-blue-300">
                     <i class="fab fa-github fa-3x"></i>
                 </a>
-                <a href="https://linkedin.com/in/Sai Sriyuktha Balusu" class="text-blue-400 hover:text-blue-300">
+                <a href="www.linkedin.com/in/sriyu" class="text-blue-400 hover:text-blue-300">
                     <i class="fab fa-linkedin fa-3x"></i>
                 </a>
                 <a href="mailto:sriyukthabalusu@gmail.com" class="text-blue-400 hover:text-blue-300">
