--- a/index.html
+++ b/index.html
@@ -279,19 +279,20 @@
 
     <!-- Contact Section -->
     <section id="contact" class="py-20 bg-gray-800">
-        <div class="container mx-auto px-6 text-center">
+      <div class="container mx-auto px-6 text-center">
             <h2 class="text-3xl font-bold mb-12">Get In Touch</h2>
             <div class="flex justify-center space-x-6">
-                <a href="https://github.com/sriyu_06" class="text-blue-400 hover:text-blue-300">
-                    <i class="fab fa-github fa-3x"></i>
-                </a>
-                <a href="www.linkedin.com/in/sriyu" class="text-blue-400 hover:text-blue-300">
-                    <i class="fab fa-linkedin fa-3x"></i>
-                </a>
-                <a href="mailto:sriyukthabalusu@gmail.com" class="text-blue-400 hover:text-blue-300">
-                    <i class="fas fa-envelope fa-3x"></i>
-                </a>
-            </div>
+    <a href="https://github.com/sriyu06" class="text-blue-400 hover:text-blue-300" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-github fa-3x"></i>
+    </a>
+    <a href="https://www.linkedin.com/in/sriyu" class="text-blue-400 hover:text-blue-300" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-linkedin fa-3x"></i>
+    </a>
+    <a href="mailto:sriyukthabalusu@gmail.com" class="text-blue-400 hover:text-blue-300">
+        <i class="fas fa-envelope fa-3x"></i>
+    </a>
+</div>
+
         </div>
     </section>
 
