--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <body class="bg-gray-900 text-white">
     <!-- Header Section -->
     <header class="fixed w-full bg-gray-800 shadow-lg z-50">
-        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <h1 class="text-2xl font-bold">Sai Sriyuktha Balusu</h1>
+        <div class="container mx-auto px-6 py-4 flex justify-between items-center flex-wrap">
+            <h1 class="text-2xl font-bold w-full md:w-fit">Sai Sriyuktha Balusu</h1>
             <nav>
                 <ul class="flex space-x-6">
                     <li><a href="#about" class="hover:text-blue-400 transition">About</a></li>
