--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <!-- Header Section -->
     <header class="fixed w-full bg-gray-800 shadow-lg z-50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center flex-wrap">
-            <h1 class="text-2xl font-bold w-full md:w-fit">Sai Sriyuktha Balusu</h1>
+            <h1 class="text-2xl font-bold w-full md:w-fit lg:w-fit">Sai Sriyuktha Balusu</h1>
             <nav>
-                <ul class="flex space-x-6">
+                <ul class="flex space-x-6 justify-between">
                     <li><a href="#about" class="hover:text-blue-400 transition">About</a></li>
                     <li><a href="#skills" class="hover:text-blue-400 transition">Skills</a></li>
                     <li><a href="#projects" class="hover:text-blue-400 transition">Projects</a></li>
